# microplex-us

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  _BUILD_LOG.md  _WORKSPACE.md  pyproject.toml
.github/workflows/: site-snapshot.yml
artifacts/: live_pe_us_data_rebuild_checkpoint_modelpass_regression_summary_20260410.json  live_pe_us_data_rebuild_checkpoint_national_irs_other_drilldown_20260410.json
dashboard/: app.js  cosilico-theme.css  index.html  styles.css
docs/: README.md  architecture.md  b2-downstream-validation-v11.md  benchmarking.md  calibrate-on-synthesizer-result.md  calibrator-decision.md  core-wiring-audit.md  embedding-prdc-validation.md  imputation-conditioning-contract.md  methodology-ledger.md  microcalibrate-wiring-plan.md  next-run-plan.md  overnight-session-2026-04-16.md  pe-construction-parity.md  per-column-zero-rate-bug.md  policyengine-oracle-compatibility.md  psid-coverage-zero-diagnosis.md  quickstart-rewire.md  rebuilding-policyengine-us-data-in-microplex.md  source-semantics.md  stage-1-pilot-results.md  stage-1-post-snap-results.md  superseding-policyengine-us-data.md  synthesizer-benchmark-scale-up.md  v6-postmortem.md  zi-factorial.md  zi-maf-hyperparameter-search.md
examples/: cps_real_data_test.py  cps_synthesis_demo.py
paper/: AFFILIATION.md  README.md  REVIEW-RESPONSE.md  _quarto.yml  index.qmd  literature-review.qmd  references.bib
reviews/: 2026-03-29-claude-state-program-review.md  2026-03-30-claude-broad-native-loss-checkpoint-review.md  2026-03-31-claude-direct-pe-native-optimizer-review.md  PENDING_CLAUDE_REVIEW.md  README.md
scripts/: augment_targets_db_for_b2.py  calibrate_on_synthesizer.py  embedding_prdc_compare.py  isolate_calibration_memory.py  run_b2_batched.py  run_b2_validation.py  run_b2_validation_single_var.py  sync_cosilico_theme.py  zi_classifier_isolated_eval.py
src/microplex_us/: __init__.py  calibration_harness.py  cps_synthetic.py  data.py  geography.py  hierarchical.py  pe_source_impute_engine.py  pe_source_impute_specs.py  pe_targets.py  source_manifests.py  source_registry.py  supabase_targets.py  target_registry.py  targets_database.py  unified_calibration.py  variables.py
tests/: __init__.py  conftest.py  test_block_synthesis.py  test_calibration_harness.py  test_cps_source_provider.py  test_cps_synthetic.py  test_data.py  test_donor_survey_source_providers.py  test_family_imputation_benchmark.py  test_geography.py  test_hierarchical.py  test_hierarchical_block_assignment.py  test_package_imports.py  test_pe_source_impute_engine.py  test_pe_source_impute_specs.py  test_psid_data_source.py  test_psid_source_provider.py  test_puf_source_provider.py  test_share_imputation.py  test_source_registry.py  test_target_adapters.py  test_target_registry.py  test_variables.py
tests/bakeoff/: test_scale_up.py
tests/calibration/: test_microcalibrate_adapter.py  test_microcalibrate_adapter_memory.py  test_us_pipeline_dispatch.py
tests/pipelines/: __init__.py  test_us.py  (+36 more)
(+76 files in other folders)
