[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microplex-us"
version = "0.2.0"
description = "US-specific adapters, pipelines, and PolicyEngine integration for microplex"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Cosilico", email = "hello@cosilico.ai" }
]
requires-python = ">=3.10"
dependencies = [
    "microplex",
    "duckdb>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
policyengine = [
    "policyengine-us==1.587.0; python_version >= '3.11' and python_version < '3.15'",
]

[project.urls]
Repository = "https://github.com/CosilicoAI/microplex-us"

[project.scripts]
microplex-us-backfill-pe-native-scores = "microplex_us.pipelines.backfill_pe_native_scores:main"
microplex-us-check-site-snapshot = "microplex_us.pipelines.check_site_snapshot:main"
microplex-us-score-pe-native-loss = "microplex_us.pipelines.pe_native_scores:main"
microplex-us-version-bump-benchmark = "microplex_us.pipelines.version_benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["src/microplex_us"]

[tool.hatch.build.targets.wheel.force-include]
"src/microplex_us/pipelines/pe_native_scores.py" = "microplex_us/pipelines/pe_native_scores.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",
    "N803",
    "N806",
]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["E402"]
"tests/**/*.py" = ["E402", "N802"]

[tool.uv.sources]
microplex = { path = "../microplex", editable = true }
